Added features on employee and insurance table